manifests/argocd/argocd-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-https
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.test`)
      kind: Rule
      services:
        - name: argocd-install-server
          port: 80
  tls:
    secretName: argocd-server-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.test`)
      kind: Rule
      services:
        - name: argocd-install-server
          port: 80
